tdf#117221 - MailMerge: Not recognising outgoing SMTP Server password when supplied by macro

After testing the pointer m_sOutServerPassword it incorrectly assignes
the value from m_sInServerPassword.
This change fixes this issue.

Change-Id: I868da1891af4d479c7dd4371297017a78248187f